- #6660 + #6582 Add missing XAtom for utf-8 handling with Xorg
- #6814 The system asks to save twice. 
- #6817 Configure requires dns_sd.h for enterprise version
- #6826 + #6829 SonarCloud Critical bugs
- #6821 Blocker bugs found by sonar in synergy and in tests
- #6825 The system requires google test even when tests are disabled with BUILD_TESTS=OFF
- #6832 TLS certificate error on macOS system

Enhancements:
- #6750 Integrate SonarCloud for static analysis and test coverage
- #6792 License key expiry
- #6799 Synergy "Business" edition
- #6803 Update Synergy icons
- #6800 Update behaviour when unregistered
- #6806 Move to Github Action for general PR builds and tests
- #6816 Improve license key validation

v1.12.0-stable
===========

Bug fixes:
- #6748 Copyright year in about dialog isn't updated

v1.12.0-rc2
===========

Bug fixes:
- #6730 Updating synergy looses settings
- #6734 Fixed naming of installers for linux and windows
- #6743 Azure build git revision showing as 0badc0de

Enhancements:
- #6739 Add submodules cloning to cmake
- #6736 Command line option for custom TLS Certificate

v1.12.0-rc1
===========

Bug fixes:
- #6487 Mouse freezes or key repeats on Linux client
- #6663 Limit GUI log Window to prevent it using up too much RAM over time
- #6587 Auto config setting doesn't do anything
- #6620 Unit tests are no longer built
- #6670 Build computers failing with language file error
- #6661 Removed deprecated namespace in gtest/gmock by updating
- #6601 Update man page with missing crypto option
- #4036 Client cursor constrained to old resolution
- #6716 Denial of Service vulnerability on servers with 4GB of ram or less

Enhancements:
- #6666 Add doxygen documentation output from pipelines
- #6674 Debian 10 X11 build for CI
- #6714 Added windows core binaries upload to sandor
- #6715 Updated language file from Crowdin
- #6688 Fully migrate CI from Jenkins to Azure Pipelines
- #6718 GitHub Action to test PR's for if ChangeLog was updated